back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  labels:
    app: back-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-app
  template:
    metadata:
      labels:
        app: back-app
    spec:
      imagePullSecrets:
        - name: ncr-registry-secret
      
      nodeSelector:
        app-pool: front-back-nodes
      
      containers:
        - name: back-container
          image: blockcloud.kr.ncr.ntruss.com/blockcloud/backend-app:bdeef8fbf90d50f1087a697ebdb5a4047ab7a8a1
          ports:
            - containerPort: 8080
