front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-app
  template:
    metadata:
      labels:
        app: front-app
    spec:
      imagePullSecrets:
        - name: ncr-registry-secret
        
      nodeSelector:
        app-pool: front-back-nodes
      
      containers:
        - name: front-container
          image: blockcloud.kr.ncr.ntruss.com/blockcloud/frontend-app:de640fd94354a069009abe7308826dcbff882afe
          ports:
            - containerPort: 80
