back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service 
  namespace: default
spec:
  selector:
    app: back-app   
  ports:
    - protocol: TCP
      port: 8080       
      targetPort: 8080
