front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: default
spec:
  selector:
    app: front-app    
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80
