ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-traffic-router
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-issuer"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "JSESSIONID"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
    nginx.ingress.kubernetes.io/session-cookie-name: "affinity-route"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
spec:
  rules:
    - host: "blockcloud.dev"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: back-service
                port:
                  number: 8080
          - path: /token/refresh
            pathType: Exact
            backend:
              service:
                name: back-service
                port:
                  number: 8080
          - path: /login/oauth2/code/google
            pathType: Exact
            backend:
              service:
                name: back-service
                port:
                  number: 8080
          - path: /oauth2/authorization
            pathType: Prefix
            backend:
              service:
                name: back-service
                port:
                  number: 8080
          - path: /oauth2/callback 
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
  tls:
    - hosts:
        - blockcloud.dev
      secretName: blockcloud-prod-tls
